name:                minesweeper
version:             0.1.0.0
synopsis:            A Minesweeper Library
homepage:            https://github.com/dmeysman/fp-minesweeper
license:             MIT
license-file:        LICENSE
author:              Dylan Meysmans
maintainer:          dmeysman@vub.ac.be
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Minesweeper.Board, Minesweeper.Cell
  build-depends:       base >=4.6 && <4.8, containers >=0.5 && <0.6, random >=1.0 && <1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
